--- a/Shared/Gtest.props
+++ b/Shared/Gtest.props
@@ -3,7 +3,7 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <IncludePath>$(SolutionDir)../Card;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)gtest-1.7.0;$(SolutionDir)gtest-1.7.0\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup />
   <ItemGroup />
