--- a/Shared/SnapCards.props
+++ b/Shared/SnapCards.props
@@ -3,7 +3,7 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <IncludePath>$(SolutionDir)../Card;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)../SnapCards;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup />
   <ItemGroup />
